--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "socket.io": "^4.5.1",
     "three": "^0.143.0",
     "web-ifc": "0.0.35",
+    "web-ifc-three": "^0.0.125",
     "web-ifc-viewer": "^1.0.207"
   }
 }
